done adding first part of the products

--- a/index.html
+++ b/index.html
@@ -42,23 +42,56 @@
             <img src="images/imgs/img/features/f1.png" alt=""><h6>Free shipping</h6>
             </div>
             <div class="fe-box">
-                <img src="images/imgs/img/features/f1.png" alt=""><h6>Free shipping</h6>
+                <img src="images/imgs/img/features/f2.png" alt=""><h6>Free shipping</h6>
                      </div>
                 <div class="fe-box">
-                    <img src="images/imgs/img/features/f1.png" alt=""><h6>Free shipping</h6>
+                    <img src="images/imgs/img/features/f3.png" alt=""><h6>Free shipping</h6>
                             </div>
                     <div class="fe-box">
-                        <img src="images/imgs/img/features/f1.png" alt=""><h6>Free shipping</h6>
+                        <img src="images/imgs/img/features/f4.png" alt=""><h6>Free shipping</h6>
                                 </div>
                         <div class="fe-box">
-                            <img src=" images/imgs/img/features/f1.png" alt=""><h6>Free shipping</h6>
+                            <img src=" images/imgs/img/features/f5.png" alt=""><h6>Free shipping</h6>
                                     </div>
                                     <div class="fe-box">
-                                        <img src=" images/imgs/img/features/f1.png" alt=""><h6>Free shipping</h6>
+                                        <img src=" images/imgs/img/features/f6.png" alt=""><h6>Free shipping</h6>
                                                 </div>                             
      </section>
-
      <!-- End features-->
+
+     <!-- products features-->
+      <section id="featuresTitles">
+        <h1>Featured Product</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+      </section>
+
+     <section id="product1"  class="section-p1">
+        <div class="proContainer">
+            <div class="pro">
+                <img src="${img}" alt="firstProduct">
+                <div id="desc">
+                    <span>${desc}</span>
+                    <h5>${name}</h5>
+                    <div class="stars">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <div class="price">$${price}</div>
+                         <a href="#"><i class="bi bi-bag-plus-fill cart"></i></a>
+                    </div>
+                </div>
+            </div>
+         </div>
+    </section>
+     <!--END PRODUCTS FEATURES-->
+     <!-- banner -->
+
+
+     <!-- END BANNER-->
+
+
+
 
 
 
